<resources>
    <string name="app_name">TinyKeeper</string>
    <string name="ooo_look_like_a_brand_new_shop">label_emptyView_new_shop</string>
    <string name="label_brand_new_shop">Wow! Looks like a brand new shop.</string>
    <string name="label_put_new_items">Let\'s put new items and become a smart keeper.</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all">Delete All</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="ks">Ks</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="change_qty">Change Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_phone">Phone</string>
    <string name="name">Name</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="discard_message">Discard your changes and keep quit editing?</string>
    <string name="log_data">log data</string>
    <string name="reports">Reports</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
